#include "team_handler.h"
#include "src/network/rpc_msg_route.h"
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE

///<<<rpc begin
void TeamServiceHandler::EnterScene(::google::protobuf::RpcController* controller,
    const ::TeamTestS2SRequest* request,
    ::TeamTestS2SRespone* response,
    ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

///<<<rpc end
